<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_session_height"
    android:layout_marginTop="16dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/left_bar"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:background="@color/purple"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_session"
            style="@style/TextStyle9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:textIsSelectable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Starfish" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more"
            android:contentDescription="@string/more" />

        <ImageView
            android:id="@+id/responses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_resp_orange"
            android:contentDescription="@string/responses" />

        <TextView
            android:id="@+id/text_responses"
            style="@style/TextStyle10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="@+id/responses"
            app:layout_constraintStart_toEndOf="@+id/responses"
            app:layout_constraintTop_toTopOf="@+id/responses"
            android:text="@string/fixed_number_of_responses"
            tools:text="6 Responses" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="56dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="6sp"
            android:textColor="@color/warm_grey"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Description Lorem ipsum dolor sit amet, cons ect etur adipiscai elit, sed do eiusmod tempor." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>